# kiosk-version

./: Cargo.toml  Dockerfile  Makefile  build.sh  docker-compose.yml  extract.txt  temp.sig
migration/: Cargo.toml
migration/src/: lib.rs  m20250711_090750_create_kiosk_versions_table.rs  m20250715_063842_create_kiosk_version_platforms_table.rs
release/: kiosk_versioning
src/: error.rs  main.rs
src/entity/: kiosk_version.rs  kiosk_version_platform.rs  mod.rs
