[workspace]
members = [".", "migration"]

[package]
name = "kiosk_versioning"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
mime_guess = "2.0.5"
sea-orm = { version = "1.1.10", features = ["sqlx-mysql", "runtime-tokio-rustls", "chrono"] }
serde = "1.0.219"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tokio = {version = "1.46.1",features = ["full"]}
tokio-util = {version = "0.7.15",features = ["io"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

